Changes in version 1.1.2 (2022-03-13)
+ Change vignette name.
+ Update HMDB extract zip file used for vignette and testing.

Changes in version 0.99.4 (2021-10-18)
+ When reading the zipped database, take the only XML file available, ignoring other files.

Changes in version 0.99.2 (2021-10-12)
+ Add ORCID, URL and BugReports.
+ Add session info and install sections in vignette.
+ Corrected indentations in vignette.

Changes in version 0.99.1 (2021-09-29)
+ Slight corrections for Bioconductor submission.

Changes in version 0.99.0 (2021-07-16)
+ Submitted to Bioconductor